[workspace]
default-members = [
    "."
]

[workspace.package]
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.io>"]
homepage = "https://cyphernet.io"
repository = "https://github.com/Cyphernet-DAO/ssi"
rust-version = "1.66"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.0.0"

###
### Main package (`ssi`)
###

[package]
name = "ssi"
version = "0.1.0"
description = "Self-sovereign identity"
keywords = ["privacy", "cypherpunk", "identity"]
categories = ["cryptography"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
ec25519 = "0.1.0"
secp256k1 = { version = "0.27.0", optional = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
