[package]
name = "ssid"
version = "0.1.0"
description = "Self-sovereign identity"
keywords = ["privacy", "cypherpunk", "identity"]
categories = ["cryptography"]
readme = "README.md"
authors = ["Cypher <cypher@cyphernet.io>"]
homepage = "https://cyphernet.io"
repository = "https://github.com/Cyphernet-DAO/ssid"
rust-version = "1.66"
edition = "2021"
license = "Apache-2.0"

[lib]

[[bin]]
name = "ssid"
required-features = ["cli"]

[dependencies]
amplify = "4.5.0"
commit_verify = "0.11.0-beta.1"
strict_encoding = "2.6.1"
strict_types = "1.6.3"
ec25519 = "0.1.0"
baid58 = "0.4.4"
base85 = "2.0.0"
bp-std = { version =  "0.11.0-beta.2", features = ["client-side-validation"] }
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive", "env", "wrap_help"], optional = true }
shellexpand = { version = "3.1.0", optional = true }

[features]
default = []
all = ["cli"]
cli = ["clap", "shellexpand"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[patch.crates-io]
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "v0.11" }
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "doubleanchors" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "doubleanchors" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "doubleanchors" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "doubleanchors" }
psbt = { git = "https://github.com/BP-WG/bp-std", branch = "v0.11" }
bp-std = { git = "https://github.com/BP-WG/bp-std", branch = "v0.11" }
